Add API and functions to add a contributor to a RAiD
